--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,13 +24,28 @@ services:
       - postgres
 
   postgres:
+    container_name: postgresql
     image: postgres:13
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: swap_git_app_dev
+      POSTGRES_DB: swap_git_api
     restart: always
     ports: 
       - 5432:5432
     volumes:
       - data:/var/lib/postgresql/data
+  rabbitmq:
+    container_name: rabbitmq
+    image: rabbitmq:3-management
+    environment:
+        RABBITMQ_DEFAULT_USER: rabbit
+        RABBITMQ_DEFAULT_PASS: rabbit
+    ports:
+        - 5672:5672
+        - 15672:15672
+    healthcheck:
+      test: ["CMD-SHELL", "rabbitmqctl node_health_check"]
+      interval: 10s
+      timeout: 60s
+      retries: 5
